# visp_megapose

./: CMakeLists.txt  README.md  package.xml  run_arduino.launch  setstiffness.py  setup.py
bringup/: bringup_megapose.sh  bringup_multi_megapose.sh  session_megapose.sh
data/: README.md
data/models/box1_1/: box1_1.mtl
data/models/box1_2/: box1_2.mtl
data/models/box1_4/: box1_4.mtl
data/models/box3/: box3.mtl
data/models/box3_8/: box3_8.mtl
data/models/box4/: box4.blend
data/models/box5_1/: box5_1.mtl
data/models/box5_2/: box5_2.mtl
data/models/box5_3/: box5_3.mtl
data/models/box5_8/: box5_8.mtl
data/models/cube/: bb.txt
data/models/cubo_verde/: cubo_verde.blend
data/repository/box1/: box1.blend  box1.blend1
data/repository/box1/box1_3_1/: box1_3_1.mtl
data/repository/box1/box1_6/: box1_6.mtl
data/repository/box1_3/: box1_3.mtl
data/repository/box2/: box2.blend  box2.blend1  box2.mtl
data/repository/box3/: box3.blend
data/repository/box3/box3_2/: box3_2.mtl
data/repository/box3/box3_3/: box3_3.blend1  box3_3.mtl
data/repository/box3/box3_4/: box3_4.mtl
data/repository/box3/box3_8/: box3_8.mtl
data/repository/box4/: box4.mtl
data/repository/box5/: box5.blend  box5.blend1
data/repository/box5/box5_4/: box5_4.mtl
data/repository/cubo_rosso/: cubo_rosso.blend  cubo_rosso.mtl
data/repository/cubo_verde/: cubo_verde.mtl
launch/: bringup_megapose.sh  camera.launch  camera_tf_static.launch  client2.launch  command.launch  d455_calibration.launch  megapose_client.launch  megapose_client_command.launch  megapose_client_detection.launch  megapose_client_tool.launch  megapose_env.sh  megapose_server.launch  try.launch
launch/env/: bringup_megapose.sh  megapose_env.sh
msg/: BB3D.msg  Object.msg  ObjectName.msg  Result.msg  boxes.msg  initialize.msg
output/: box1_pose.txt
output/bb/: [A[A[A[A[A[Abox1_bb.json  [A_bb.json  _bb.json  box1_1_bb.json  box1_2_bb.json  box1_3_1_bb.json  box1_3_bb.json  box1_4_bb.json  box1_6_bb.json  box1_bb.json  box1_bb.txt  box3_bb.txt  cube_bb.json  cube_bb.txt  cubo_rosso_bb.txt  cubo_verde_bb.json  cubo_verde_bb.txt  tool_bb.txt
output/pose/: box1_1_pose.json  box1_2_pose.json  box1_3_1_pose.json  box1_3_pose.json  box1_pose.json  box1_pose.txt  cube_pose.json
params/: camera.json  camera.txt  client.yaml  client_detection.yaml  command.yaml  object_list.yaml  server.yaml
scripts/: bb2.py  bb3_publisher.py  client2.cpp  command.py  megapose_client.cpp  megapose_client_command.cpp  megapose_client_depth.cpp  megapose_client_detection.cpp  megapose_command.py  megapose_server_ copy.py  megapose_server_.py  megapose_server_depth.py  megapose_server_depth2.py  megapose_variables_final.json  new_cam_info.py  object_pose.py  tool_pose.py  tr.py  try.py  vecio.cpp
src/visp_megapose/: megapose_depend.py
srv/: Init.srv  Render.srv  Track.srv
